<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Parcel Organizer</string>

    <!-- Default Error Messages -->
    <string name="error_max_characters_45">Cannot exceed 45 characters</string>
    <string name="error_min_characters_6">Must be minimum of 6 characters</string>
    <string name="error_required">Required</string>
    <string name="change_at_least_1">Change at least one field</string>

    <!-- Global Error Dialogs -->
    <string name="error_internal_title">Oops something went wrong</string>
    <string name="error_internal_message">Something went wrong while processing your request, please try again later.</string>
    <string name="error_authentication_title">Authentication failed</string>
    <string name="error_authentication_message">Please login again.</string>
    <string name="error_service_unavailable_title">Could not establish a connection</string>
    <string name="error_service_unavailable_message">De server couldn\'t be reached. Please check your internet connection or try again later.</string>

    <!-- Dialog Buttons -->
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="submit">Submit</string>

    <!-- Search -->
    <string name="search">Search</string>
    <string name="search_hint">Title</string>

    <!-- Sorting and search-->
    <string name="sort_by">Sort by: %1s</string>
    <string name="sort_by_no_args">Sort By</string>
    <string name="sort_order">Sort order: %1s</string>
    <string name="sort_order_no_args">Sort Order</string>
    <string name="search_by">Search by: %1s</string>
    <string name="search_by_no_args">Search By</string>
    <string name="delivered">Delivered</string>
    <string name="sent">Sent</string>
    <string name="ordered">Ordered</string>
    <string name="descending">Descending</string>
    <string name="ascending">Ascending</string>

    <!-- Create/Update Parcel -->
    <string name="create_parcel">Create Parcel</string>
    <string name="update_parcel">Update Parcel</string>
    <string name="hint_title">Give your parcel a title *</string>
    <string name="hint_sender">Who is the sender of the parcel</string>
    <string name="hint_courier">Who is the courier of the parcel</string>
    <string name="hint_tracking_url">What is the tracking url</string>
    <string name="hint_additional_information">Additional information</string>
    <string name="hint_status">What is the status of the parcel *</string>
    <string name="error_invalid_url">Invalid Url. Make sure that the url starts with http:// or https://</string>

    <!-- Parcels -->
    <string name="parcels">Parcels</string>
    <string name="welcome_title">Welcome %1s</string>
    <string name="title">Title</string>
    <string name="sender">Sender</string>
    <string name="courier">Courier</string>
    <string name="last_updated">Last Updated</string>
    <string name="status">Status</string>
    <string name="parcels_empty_state_title">No parcels found</string>
    <string name="parcels_empty_state_message">Try refreshing by pulling down or add a parcel by pressing the floating action button below. It\'s also possible to create a parcel by sharing a tracking url with the app.</string>
    <string name="provide_valid_url">Please provide the parcel with a valid tracking url</string>

    <!-- Delete Parcel -->
    <string name="dialog_delete_parcel_title">Delete %1s</string>
    <string name="dialog_delete_parcel_message">Are you sure you want to delete %1s</string>

    <!-- Login -->
    <string name="login">Login</string>
    <string name="login_title">Parcel Organizer</string>
    <string name="login_subtitle">Organizing parcels made easy</string>
    <string name="register_here">Register here</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="hint_email">Your e-mail address *</string>
    <string name="hint_password">Your password *</string>
    <string name="error_login_credentials">Email/password combination incorrect.</string>
    <string name="error_invalid_email">Invalid email</string>

    <!-- Register -->
    <string name="register">Register</string>
    <string name="hint_name">Name *</string>
    <string name="hint_confirm_password">Confirm Password *</string>
    <string name="already_exists">Already exists</string>
    <string name="error_confirm_password">Input doesn\'t match password</string>

    <!-- Logout -->
    <string name="logout">Logout</string>
    <string name="dialog_logout_title">Are you sure?</string>
    <string name="dialog_logout_message">Press yes if you want to logout now.</string>

    <!-- Bottom Navigation Bar -->
    <string name="nav_item_parcels">Parcels</string>
    <string name="nav_item_profile">User profile</string>

    <!-- User Profile -->
    <string name="change_profile">Change Profile</string>
    <string name="change_password">Change password</string>
    <string name="email">email</string>
    <string name="name">name</string>
    <string name="dark_theme_label">Dark Theme</string>

    <!-- Change Profile -->
    <string name="hint_current_password">Current password *</string>
    <string name="update">Update</string>
    <string name="current_password_incorrect">Invalid</string>

    <!-- Change Password -->
    <string name="hint_new_password">New Password *</string>
    <string name="hint_confirm_new_password">Confirm new password *</string>

    <!-- Share -->
    <string name="share_tracking_url">Share tracking url with</string>

    <!-- Forgot Password -->
    <string name="send_reset_request">Reset</string>
    <string name="reset_request_message">A password reset link has been sent to this email address.</string>

    <!-- Reset Password -->
    <string name="reset_password">Reset Password</string>
    <string name="error_reset_password">Invalid or expired reset link. Request a new one.</string>
    <string name="success_reset_password">Your password has been successfully changed.</string>

</resources>
