<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_bottom_sheet_heading"
        style="@style/BottomSheetHeaderStyle"
        android:text="@string/sort_by_no_args"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgSorting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@id/rbTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_bottom_sheet_heading">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbTitle"
            style="@style/BottomSheetRadioButtonStyle"
            android:text="@string/title" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbSender"
            style="@style/BottomSheetRadioButtonStyle"
            android:text="@string/sender" />

        <RadioButton
            android:id="@+id/rbCourier"
            style="@style/BottomSheetRadioButtonStyle"
            android:text="@string/courier" />

        <RadioButton
            android:id="@+id/rbDate"
            style="@style/BottomSheetRadioButtonStyle"
            android:text="@string/last_updated" />

        <RadioButton
            android:id="@+id/rbStatus"
            style="@style/BottomSheetRadioButtonStyle"
            android:text="@string/status" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>