<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_bottom_sheet_heading"
        style="@style/Widget.MyTheme.BottomSheetHeaderStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_order_no_args"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgSorting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@id/rbTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_bottom_sheet_heading">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbAscending"
            style="@style/Widget.MyTheme.BottomSheetRadioButtonStyle"
            android:text="@string/ascending" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbDescending"
            style="@style/Widget.MyTheme.BottomSheetRadioButtonStyle"
            android:text="@string/descending" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>