<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="16dp"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/tv_bottom_sheet_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/filter_by_no_args"
        android:textColor="@color/colorSecondaryText"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/cbOrdered"
        style="@style/BottomSheetCheckBoxStyle"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/ordered"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_bottom_sheet_heading" />

    <CheckBox
        android:id="@+id/cbSent"
        style="@style/BottomSheetCheckBoxStyle"
        android:layout_width="0dp"
        android:text="@string/sent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cbOrdered" />

    <CheckBox
        android:id="@+id/cbDelivered"
        style="@style/BottomSheetCheckBoxStyle"
        android:layout_width="0dp"
        android:text="@string/delivered"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cbSent" />

</androidx.constraintlayout.widget.ConstraintLayout>