<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="parcelForm"
            type="com.km.parceltracker.form.ParcelForm" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilTitle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            errorText="@{parcelForm.titleError}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTitle"
                style="@style/SingleLineInputEditTextStyle"
                android:hint="@string/hint_title"
                android:inputType="text"
                android:text="@={parcelForm.title}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilSender"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            errorText="@{parcelForm.senderError}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/key_line_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSender"
                style="@style/SingleLineInputEditTextStyle"
                android:hint="@string/hint_sender"
                android:inputType="text"
                android:text="@={parcelForm.sender}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCourier"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            errorText="@{parcelForm.courierError}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/key_line_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilSender">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCourier"
                style="@style/SingleLineInputEditTextStyle"
                android:hint="@string/hint_courier"
                android:inputType="text"
                android:text="@={parcelForm.courier}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilTrackingUrl"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            errorText="@{parcelForm.trackingUrlError}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/key_line_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilCourier">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTrackingUrl"
                style="@style/SingleLineInputEditTextStyle"
                android:hint="@string/hint_tracking_url"
                android:inputType="text"
                android:text="@={parcelForm.trackingUrl}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilStatus"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            errorText="@{parcelForm.trackingStatusError}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/key_line_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilTrackingUrl">

            <AutoCompleteTextView
                android:id="@+id/dropdownStatus"
                setParcelStatusDropdownListener="@{parcelForm.trackingStatus}"
                setParcelStatusDropdownText="@{parcelForm.trackingStatus}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/hint_status"
                android:imeOptions="actionDone" />

        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>